improving project descriptions

--- a/aartics/projects/allsportsbar/index.htm
+++ b/aartics/projects/allsportsbar/index.htm
@@ -12,9 +12,12 @@
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <div id="back-button"><a href="aartics.com">Back</a></div>
+    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
+    <div id="back-button">
+    <a href="http://www.aartics.com">aartics.com</a>
+    </div>
     <span class="project-name">
-      all sports bar
+      project: all sports bar, mumbai
     </span>
   </div>
 </div>
@@ -22,30 +25,32 @@
 <div id="project-content">
   <img id="cover" src="local_img/001.png"/>
   <div class="image-title">
-  This is a pic
+  <h2>Project Context</h2>
   </div>
   <img src="local_img/allsports_intro.png">
 
   <div class="image-title">
-  This is a pic
+  <h2>3D views of design to be executed</h2>
   </div>
   <img src="local_img/002_allsports_02_view.png">
   <div class="image-title">
-  This is a pic
+  <h2>3D plan view of furniture layout</h2>
   </div>
   <img src="local_img/allsports_03_plan.png">
   <div class="image-title">
-  This is a pic
+  <h2>Completed project site maps exactly to design concept</h2>
+  <p>The design and execution of this project was completed in 25 days, right before the launch of the internation cricket tournament</p>
   </div> 
   <img src="local_img/003_allsports_01_pic.png">
-  <div class="image-title">
-  This is a pic
-  </div> 
   <img src="local_img/allsports_04_pic.png">
   <div class="image-title">
-  This is a pic
+  <h2>Architect with Arris Architects, Mumbai</h2>
+  <p>This project was designed and completed when I was an architect with Arris Architects, Mumbai.</p>
   </div>
   <img src="local_img/all_sports_end_arris.png">
+  <div class="image-title">
+  <h2><a href="../aartics_architecture.pdf" target="_blank">Click here to see complete Architectural design portfolio</a></h2>
+  </div>
 </div>
 
 
