--- a/aartics/projects/barcelona/index.htm
+++ b/aartics/projects/barcelona/index.htm
@@ -12,9 +12,12 @@
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <div id="back-button"><a href="aartics.com">Back</a></div>
+    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
+    <div id="back-button">
+    <a href="http://www.aartics.com">aartics.com</a>
+    </div>
     <span class="project-name">
-      barcelona, la ciudad idea
+      la ciudad idea, barcelona
     </span>
   </div>
 </div>
@@ -22,22 +25,33 @@
 <div id="project-content">
   <img id="cover" src="local_img/001.png"/>
   <div class="image-title">
-  This is a pic
+  <h2>Project Context</h2>
+  <p>Our team of 4 proposed a restructuring of the public transport, private transport and connected public space axes throughout the Barcelona city center.</p>
   </div>
   <img src="local_img/barcelona_intro.png">
 
   <div class="image-title">
-  This is a pic
+  <h2>Mapping new public transportation routes</h2>
+  <p>The new public transport system gets rid of the convulated bus routes and proposes a simple horizontal and thoroughfare of buses that has larger coverage,  better frequency and minimises confusion for new travellers. This would increase the efficiency of public transport</p>
   </div>
   <img src="local_img/barcelona_02_map.png">
   <div class="image-title">
-  This is a pic
+  <h2>Superblocks</h2>
+  <p>Based on the current urban planning blocks of the city, we proposed a suport block that would combine 4 blocks. Private transportation and parking is moved outside the 4 blocks, and the interior is freed up to be open public spaces.</p>
   </div>
   <img src="local_img/barcelona_03_pics.png">
   <div class="image-title">
   This is a pic
   </div> 
   <img src="local_img/barcelona_04_img.png">
+  <div class="image-title">
+  <h2>M.Sc Urbanism Term Project, U.P.C, Barcelona</h2>
+  <p>This project was presented at U.P.C, Barcelona, as part of the inter-university program -  European Masters in Urbanism</p>
+  </div> 
+  <img src="local_img/barcelona_end.png">
+  <div class="image-title">
+  <a href="../aartics_urbanism.pdf" target="_blank"><h2>Click here to see all Urban design projects</h2></a>
+  </div> 
 </div>
 
 
