--- a/aartics/projects/bendy/index.htm
+++ b/aartics/projects/bendy/index.htm
@@ -12,9 +12,12 @@
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <div id="back-button"><a href="aartics.com">Back</a></div>
+    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
+    <div id="back-button">
+    <a href="http://www.aartics.com">aartics.com</a>
+    </div>
     <span class="project-name">
-      homeless shelter cart
+      project: shelter-cart, new york
     </span>
   </div>
 </div>
@@ -22,18 +25,21 @@
 <div id="project-content">
   <img id="cover" src="local_img/001.png"/>
   <div class="image-title">
-  This is a pic
+  <h2>Conceptual rendering of the shelter cart in multiple congurations</h2>
   </div>
   <img src="local_img/bendy_01_view.jpg">
 
   <div class="image-title">
-  This is a pic
+  <h2>Project Context</h2>
   </div>
   <img src="local_img/bendy_intro.png">
   <div class="image-title">
-  This is a pic
+  <h2>Construction and joinery details</h2>
   </div> 
   <img src="local_img/bendy_02_view.png">
+  <div class="image-title">
+  <h2><a href="../aartics_architecture.pdf" target="_blank">Click here to see complete Architectural design portfolio</a></h2>
+  </div>
 </div>
 
 
