--- a/aartics/projects/coimbatore/index.htm
+++ b/aartics/projects/coimbatore/index.htm
@@ -12,44 +12,38 @@
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <div id="back-button"><a href="aartics.com">Back</a></div>
+    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
+    <div id="back-button">
+    <a href="http://www.aartics.com">aartics.com</a>
+    </div>
     <span class="project-name">
-      mall at coimbatore
+      project: new mall, coimbatore
     </span>
   </div>
 </div>
-
 <div id="project-content">
   <img id="cover" src="local_img/001.png"/>
   <div class="image-title">
-  This is a pic
+  <h2>Project Context</h2>
   </div>
   <img src="local_img/coimbatore_intro.png">
 
   <div class="image-title">
-  This is a pic
+  <h2>Plan</h2>
   </div>
   <img src="local_img/coimbatore_plan1.png">
-  <div class="image-title">
-  This is a pic
-  </div>
   <img src="local_img/coimbatore_plan23.png">
   <div class="image-title">
-  This is a pic
+  Design Concept views
+  <p>Description of the design</p>
   </div> 
   <img src="local_img/coimbatore_view1.png">
-  <div class="image-title">
-  This is a pic
-  </div> 
   <img src="local_img/coimbatore_view2.png">
-  <div class="image-title">
-  This is a pic
-  </div> 
   <img src="local_img/coimbatore_view3.png">
-  <div class="image-title">
-  This is a pic
-  </div> 
   <img src="local_img/coimbatore_view4.png">
+  <div class="image-title">
+  <h2><a href="../aartics_architecture.pdf" target="_blank">Click here to see complete Architectural design portfolio</a></h2>
+  </div>
 </div>
 
 
