--- a/aartics/projects/mumbai/index.htm
+++ b/aartics/projects/mumbai/index.htm
@@ -12,9 +12,12 @@
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <div id="back-button"><a href="aartics.com">Back</a></div>
+    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
+    <div id="back-button">
+    <a href="http://www.aartics.com">aartics.com</a>
+    </div>
     <span class="project-name">
-      recentering mumbai
+      project: recentering mumbai
     </span>
   </div>
 </div>
@@ -22,30 +25,34 @@
 <div id="project-content">
   <img id="cover" src="local_img/001.png"/>
   <div class="image-title">
-  This is a pic
+  <h2>Project Context Description</h2>
   </div>
   <img src="local_img/002_mumbai_intro.png">
 
   <div class="image-title">
-  This is a pic
+  <h2>3D Concept rendering for new waterfront development</h2>
   </div>
   <img src="local_img/view.jpg">
   <div class="image-title">
-  This is a pic
+  <h2>Phased out Masterplan for wetland economic zone</h2>
   </div>
   <img src="local_img/plan.jpg">
   <div class="image-title">
-  This is a pic
+  <h2>Mapping research for the urban growth of Munbai</h2>
   </div> 
   <img src="local_img/pg1.jpg">
   <div class="image-title">
-  This is a pic
+  <h2>Innovation in methods of urban development</h2>
   </div> 
   <img src="local_img/pg2.jpg">
   <div class="image-title">
-  This is a pic
+  <h2>Design Dissertation, M.Sc Urbanism, Netherlands</h2>
+  <p>This project was presented for the final planning and design dissertation project for my Masters in Urbanism from T.U. Delft, as part of the inter-university program -  European Masters in Urbanism</p>
   </div> 
   <img src="local_img/mumbai_end.png">
+  <div class="image-title">
+  <a href="../aartics_recentering_mumbai.pdf" target="_blank"><h2>Click here to see the project in more detail</h2></a>
+  </div> 
 </div>
 
 
