--- a/aartics/projects/octet/index.htm
+++ b/aartics/projects/octet/index.htm
@@ -7,44 +7,28 @@
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
   <link rel="stylesheet" href="../aartics_projects.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <div id="back-button"><a href="aartics.com">Back</a></div>
+    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
+    <div id="back-button">
+    <a href="http://www.aartics.com">aartics.com</a>
+    </div>
     <span class="project-name">
-      3D print octet truss
+      project: 3D Printed Space Frame
     </span>
   </div>
 </div>
 
-<section class="cover">
-  <img id="cover" src="local_img/001.png"/>
-<h1>hello world</h1>
-</section>
-
 
 <div id="project-content">
-
-  <div class="image-title">
-  This is a pic
-  <p>this is some text</p>
-  </div>
+  <img id="cover" src="local_img/001.png"/>
+  <img src="local_img/views.png">
   <img src="local_img/01.png">
-
-  <div class="image-title">
-  This is a pic
-  </div>
   <img src="local_img/02.png">
-  <div class="image-title">
-  This is a pic
-  </div>
   <img src="local_img/03.jpg">
-  <div class="image-title">
-  This is a pic
-  </div> 
   <img src="local_img/04.png">
 </div>
 
