--- a/aartics/projects/sfac/index.htm
+++ b/aartics/projects/sfac/index.htm
@@ -12,9 +12,12 @@
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <div id="back-button"><a href="aartics.com">Back</a></div>
+    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
+    <div id="back-button">
+    <a href="http://www.aartics.com">aartics.com</a>
+    </div>
     <span class="project-name">
-      public voting app for sfac
+      project: public voting kiosk for sfac
     </span>
   </div>
 </div>
