--- a/aartics/projects/graphics/index.htm
+++ b/aartics/projects/graphics/index.htm
@@ -12,9 +12,12 @@
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <div id="back-button"><a href="aartics.com">Back</a></div>
+    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
+    <div id="back-button">
+    <a href="http://www.aartics.com">aartics.com</a>
+    </div>
     <span class="project-name">
-      graphics for self-enablement
+      miscellaneous graphics
     </span>
   </div>
 </div>
@@ -23,11 +26,13 @@
   <img id="cover" src="local_img/001.png"/>
 
   <div class="image-title">
-  This is a pic
+  <h2>Clipart for self-enabled learning</h2>
+  <p>Hired by Illumine Knowledge Resources. They wanted to put together a package for self-enabled learning. There graphics were developed to be used a clipart in presentations and print, to identify each unique section of learning type.</p>
   </div>
   <img src="local_img/001_clipart.png">
   <div class="image-title">
-  This is a pic
+  <h2>Logos and Branding</h2>
+  <p>Every design project and communication needs visual identity that is closely associated with the ethos of the project. I love to go the extra mile and complete some logos and branding that becomes the identity of the design package</p>
   </div>
   <img src="local_img/logos.png">
 </div>
