--- a/aartics/projects/sfac/index.htm
+++ b/aartics/projects/sfac/index.htm
@@ -24,20 +24,91 @@
 
 <div id="project-content">
   <img id="cover" src="local_img/001.png"/>
-  <img src="local_img/sfac_002.png">
-  <img src="local_img/sfac_strategy_gif.gif">
-  <img src="local_img/sfac_solution.png">
-  <video width="740" height="600" autoplay controls loop>
-    <source src="local_img/aartics_sfac_votingapp.mp4" type="video/mp4">
-  </video>
-  <img src="local_img/sfac_logo.png">
-  <img src="local_img/sfac_prototype.png">
   <div class="image-title">
-  <video width="740" height="600" autoplay controls loop>
+    San Francisco Arts Commission
+    <p><br>The SF Arts Commission is the city council that champions the arts. Through art education programs, street activation initiatives, public art work, grant funded performances and more, the SFAC acts as a catalyst for life-changing experiences for the citizens and tourists of one of the most beautiful cities in the world.</p>
+    <h2>Citizens connect with the public art commissioned by SFAC for several intentions:</h2>
+    <img src="local_img/sfac_citizen_intention.png" width="80%"/>
+  </div>
+  <div class="image-title">
+    Our Mission
+    <p><br>The SFAC is looking to be much more transparent in it's plans for public art, and wants to engage the city's inhabitants to help prioritize what it invests in.</p>
+    <h4>Pain Points to address:</h4>
+    <img src="local_img/sfac_pain_points.png" width="80%"/>
+  </div>
+
+  <div class="image-title">
+    Our Proposed Solution
+    <p><br>We modeled designs for an accessible turnable public voting kiosk which can hold a digital touch device like an iPad which as a public option polling application. These kiosks are located in public spaces in the city where citizens pause.</p>
+    <img src="local_img/sfac_design_solution.png"/>
+    Video of voting application prototype:
+    <video width="740" height="600" autoplay controls loop>
+      <source src="local_img/aartics_sfac_votingapp.mp4" type="video/mp4">
+    </video>
+  </div>
+  
+  <div class="image-title">
+  Arriving at a Strategy
+  <p><br>From our research and collaborative design process, we realized that the best way to engage public participation is by intervening seamlessly in public spaces where citizens might pause.</p>
+  <h2> Since citizens interface with the city at several touchpoints like public areas, this gives SFAC more opportunities to connect with people to anonymously vote for at while they pass by or wait...</h2>
+  <img src="local_img/sfac_citizen_enagement.png" width="80%"/>
+  </div>
+
+  <div class="image-title">
+    Research for Design:<br>
+    <p><br>Our design proposal is based on user research, competitive and comparitive analyses. Our design hypotheses and solution statements were born of surveys, interviews and prototypes, which are described here.</p>
+    <h2><a href="" target="_blank">Click here to take the survey</a></h2>
+    <img src="local_img/sfac_survey.png">
+    <br>
+  </div>
+  <div class="image-title">
+    Results from the survey:
+    <h2>The survey showed diverse and divided opinion about the public art, with citizens expressing views such as:</h2>
+    <p class="quotes"><br>“While $400K sounds like a lot of money, it's probably a drop in the bucket of the whole project. I don't think that the citizens will "benefit", but perhaps they'll ENJOY it.”</p>
+    <p class="quotes"><br>“Not sure. I love public art but we might need that money for more pressing social justice causes.”</p>
+    <p class="quotes"><br>“For $ 400,000 does this art include a building??”</p>
+  </div>
+  <div class="image-title">
+    Competitive Analysis
+    <p><br>We used a heuristic framework to study the websites and processes of other city council bodies from the Bay Area to learn more about how we can improve SFAC's presence</p>
+    <img src="local_img/sfac_competitive.png"/>
+  </div>
+  <div class="image-title">
+    Comparative Analysis
+    <p><br>We took inspiration from physical as well as digital applications for ideation</p>
+    <img src="local_img/sfac_comparative.png"/>
+  </div>  
+  <div class="image-title">
+    Personas
+    <p><br>Representing all the citizens of San Francisco was a difficult task, but we mapped the survey and interview candidates to 3 pseudo-personas</p>
+    <img src="local_img/sfac_personas.png"/>
+  </div>
+  <div class="image-title">
+    Cardboard Prototypes for User testing
+    <p><br>We made prototypes of cardboard and paper, which aided us in illiciting feedback from several users. This helped us rapidly go through several design iterations for the flow and features of the product</p>
+    <img src="local_img/sfac_team_prototyping.png"/>
+  </div>
+
+  <div class="image-title">
+    Video of User Feedback for rapid prototypes:
+    <video width="740" height="600" controls>
     <source src="local_img/sfac_feedback.mp4" type="video/mp4">
   </video>
+  </div>
+  <div class="image-title">
+    Wireframes for website extension - SFAC Forum
+    <p><br>We also presented wireframes and clickable prototypes for the "SFAC Forum" - an addition to the SFAC website which will allow users to share opinions and have a moderated discussion about public arts and performances on the website</p>
+    <img src="local_img/sfac_website_wireframes.png"/>
+  </div>
+  <div class="image-title">
+    High Fidelity Mockup of webpage
+    <p><br>We used the wireframes and created the high fidelity mockup for the voting and discussion page</p>
+    <img src="local_img/sfac_forum.png" width=80%/>
+  </div>
+  
 </div>
 
+<!--   <img src="local_img/sfac_logo.png"> -->
 
   <script>
   </script>
