addition to sfac

--- a/aartics/projects/sfac/index.htm
+++ b/aartics/projects/sfac/index.htm
@@ -105,6 +105,11 @@
     <p><br>We used the wireframes and created the high fidelity mockup for the voting and discussion page</p>
     <img src="local_img/sfac_forum.png" width=80%/>
   </div>
+  <div class="image-title">
+    High Fidelity Mockups of tablet screens
+    <p><br>The design for the webpage relates closely to the experience of the public polling application on the kiosk tablets</p>
+    <img src="local_img/sfac_tablet_mockups.png"/>
+  </div>
   
 </div>
 
