cover image responsive

--- a/aartics/projects/coimbatore/index.htm
+++ b/aartics/projects/coimbatore/index.htm
@@ -21,8 +21,10 @@
     </span>
   </div>
 </div>
-<div id="project-content">
+<div id="bcgcover">
   <img id="cover" src="local_img/001.png"/>
+</div>
+<div id="project-content">
   <div class="image-title">
   <h2>Project Context</h2>
   </div>
