--- a/aartics/projects/graphics/index.htm
+++ b/aartics/projects/graphics/index.htm
@@ -21,10 +21,10 @@
     </span>
   </div>
 </div>
-
-<div id="project-content">
+<div id="bcgcover">
   <img id="cover" src="local_img/001.png"/>
-
+</div>
+<div id="project-content">
   <div class="image-title">
   <h2>Clipart for self-enabled learning</h2>
   <p>Hired by Illumine Knowledge Resources. They wanted to put together a package for self-enabled learning. There graphics were developed to be used a clipart in presentations and print, to identify each unique section of learning type.</p>
