--- a/aartics/projects/resonateai/index.htm
+++ b/aartics/projects/resonateai/index.htm
@@ -21,10 +21,10 @@
     </span>
   </div>
 </div>
-
-<div id="project-content">
+<div id="bcgcover">
   <img id="cover" src="local_img/001.png"/>
-
+</div>
+<div id="project-content">
   <div class="image-title">
   Resonate.ai - Before
   </div>
