--- a/aartics/projects/sfac/index.htm
+++ b/aartics/projects/sfac/index.htm
@@ -22,8 +22,12 @@
   </div>
 </div>
 
-<div id="project-content">
+<div id="bcgcover">
   <img id="cover" src="local_img/001.png"/>
+</div>
+  
+<div id="project-content">
+
   <div class="image-title">
     San Francisco Arts Commission
     <p><br>The SF Arts Commission is the city council that champions the arts. Through art education programs, street activation initiatives, public art work, grant funded performances and more, the SFAC acts as a catalyst for life-changing experiences for the citizens and tourists of one of the most beautiful cities in the world.</p>
