--- a/aartics/projects/barcelona/index.htm
+++ b/aartics/projects/barcelona/index.htm
@@ -22,26 +22,31 @@
   </div>
 </div>
 
-<div id="project-content">
+<div id="bcgcover">
   <img id="cover" src="local_img/001.png"/>
+</div>
+
+<div id="project-content">
+
   <div class="image-title">
-  <h2>Project Context</h2>
-  <p>Our team of 4 proposed a restructuring of the public transport, private transport and connected public space axes throughout the Barcelona city center.</p>
+  Project Context
+  <p><br>Our team of 4 proposed a restructuring of the public transport, private transport and connected public space axes throughout the Barcelona city center.</p>
   </div>
   <img src="local_img/barcelona_intro.png">
 
   <div class="image-title">
-  <h2>Mapping new public transportation routes</h2>
+  Mapping new public transportation routes
   <p>The new public transport system gets rid of the convulated bus routes and proposes a simple horizontal and thoroughfare of buses that has larger coverage,  better frequency and minimises confusion for new travellers. This would increase the efficiency of public transport</p>
   </div>
   <img src="local_img/barcelona_02_map.png">
   <div class="image-title">
   <h2>Superblocks</h2>
-  <p>Based on the current urban planning blocks of the city, we proposed a suport block that would combine 4 blocks. Private transportation and parking is moved outside the 4 blocks, and the interior is freed up to be open public spaces.</p>
+  <p>Based on the current urban planning pattern of the city, we proposed a super-block that would combine 4 blocks. Private transportation and parking is moved outside the super-block, and the interior is freed up to be open public spaces.</p>
   </div>
   <img src="local_img/barcelona_03_pics.png">
   <div class="image-title">
-  This is a pic
+    Mapping traffic flow intensity
+  <p><br>Mapping the redistribution of the private transport distribution based on the mapping data of the current peak traffic flow</p>
   </div> 
   <img src="local_img/barcelona_04_img.png">
   <div class="image-title">
