--- a/aartics/projects/octet/index.htm
+++ b/aartics/projects/octet/index.htm
@@ -21,10 +21,11 @@
     </span>
   </div>
 </div>
-
+<div id="bcgcover">
+  <img id="cover" src="local_img/001.png"/>
+</div>
 
 <div id="project-content">
-  <img id="cover" src="local_img/001.png"/>
   <img src="local_img/views.png">
   <img src="local_img/01.png">
   <img src="local_img/02.png">
