--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -364,7 +364,7 @@
             <g id="credits_box" data-attach="#c1" class="attached">
                 <polygon id="c1" class="cls-2" points="3292.5 378.97 3143.56 636.95 2845.22 636.57 2695.84 378.78 2845.22 121 3143.56 121 3292.5 378.97"/>
                 <text x="3000" y="280" data-x-rel="-500" id="credits13" class="credits">ARTICLE:</text>
-                <text x="3000" y="305" data-x-rel="-500" id="credits11" class="creditsa">prototyping for VR</text>
+                <text x="3000" y="305" data-x-rel="-500" id="credits11" class="creditsa">prototyping 3D</text>
                 <text x="3000" y="325" data-x-rel="-500" id="credits12" class="creditsa">in a browser</text>
                 <text x="3000" y="355" data-x-rel="-500" id="creditsa" class="credits">i designed and made this</text>
                 <text x="3000" y="375" data-x-rel="-500" id="credits0" class="credits">3d interactive prototype with:</text>
