titles for assen

--- a/aartics/projects/assen/index.htm
+++ b/aartics/projects/assen/index.htm
@@ -26,26 +26,28 @@
 </div>
 <div id="project-content">
   <div class="image-title">
-  This is a pic
+  Project Context
+  <h2>Role: Urban Designer at Studio Franz Ziegler, Rotterdam</h2>
   </div>
-  <img src="local_img/assen_intro.png">
+  <img src="local_img/assen_intro.png"/>
 
   <div class="image-title">
-  This is a pic
+  Presenting the master plan
+  <p><br>Assen is developing a city boulevard, and Studio Franz Ziegler was appointed to supervise the development. I got involved in the project when it was at it's deliverables stage - we made the essential drawings like plans, maps and sections.</p>
   </div>
-  <img src="local_img/assen_01_map.png">
+  <img src="local_img/assen_01_map.png"/>
   <div class="image-title">
-  This is a pic
+  A Ten Meter Model for the citizens
+  <p><br>The studio developed a scaled model of the entire boulevard, resulting in a 10M model which served as a great tool for common discussions and understanding</p>
+  <p>We presented the design and discussed the minute details with the citizens at evenings in the City Hall of Assen<p>
   </div>
-  <img src="local_img/assen_pic1.png">
+  <img src="local_img/assen_pic1.png" width="100%"/>
+  <img src="local_img/assen_pic2.png" width="100%"/>
   <div class="image-title">
-  This is a pic
+    Prototyping in models
+    <p><br>This is my first city-scaled strategic urban planning project and learnt a lot, especially about the Dutch culture of Urbanism</p>
   </div> 
-  <img src="local_img/assen_pic2.png">
-  <div class="image-title">
-  This is a pic
-  </div> 
-  <img src="local_img/assen_pic3.png">
+  <img src="local_img/assen_pic3.png"/>
 </div>
 
 
