cleaner titles fixes#8

--- a/aartics/projects/allsportsbar/index.htm
+++ b/aartics/projects/allsportsbar/index.htm
@@ -26,31 +26,32 @@
 </div>
 <div id="project-content">
   <div class="image-title">
-  <h2>Project Context</h2>
+  Project Context
+  <h2>Role: Architect, Arris Architects, Mumbai</h2>
   </div>
   <img src="local_img/allsports_intro.png">
 
   <div class="image-title">
-  <h2>3D views of design to be executed</h2>
+  3D views of design to be executed
   </div>
   <img src="local_img/002_allsports_02_view.png">
   <div class="image-title">
-  <h2>3D plan view of furniture layout</h2>
+  3D plan view of furniture layout
   </div>
   <img src="local_img/allsports_03_plan.png">
   <div class="image-title">
-  <h2>Completed project site maps exactly to design concept</h2>
-  <p>The design and execution of this project was completed in 25 days, right before the launch of the internation cricket tournament</p>
+  Completed project site maps exactly to design concept
+  <p><br>The design and execution of this project was completed in 25 days, right before the launch of the internation cricket tournament</p>
   </div> 
   <img src="local_img/003_allsports_01_pic.png">
   <img src="local_img/allsports_04_pic.png">
   <div class="image-title">
-  <h2>Architect with Arris Architects, Mumbai</h2>
-  <p>This project was designed and completed when I was an architect with Arris Architects, Mumbai.</p>
+  Architect with Arris Architects, Mumbai
+  <p><br>This project was designed and completed when I was an architect with Arris Architects, Mumbai.</p>
   </div>
   <img src="local_img/all_sports_end_arris.png">
   <div class="image-title">
-  <h2><a href="../aartics_architecture.pdf" target="_blank">Click here to see complete Architectural design portfolio</a></h2>
+  <a href="../aartics_architecture.pdf" target="_blank">Click here to see complete Architectural design portfolio</a>
   </div>
 </div>
 
