--- a/aartics/projects/bendy/index.htm
+++ b/aartics/projects/bendy/index.htm
@@ -28,18 +28,19 @@
   <div class="image-title">
   <h2>Conceptual rendering of the shelter cart in multiple congurations</h2>
   </div>
-  <img src="local_img/bendy_01_view.jpg">
+  <img src="local_img/bendy_01_view.jpg" width=100%/>
 
   <div class="image-title">
-  <h2>Project Context</h2>
+  Project Context
+  <h2>Product Design Competition Entry</h2>
   </div>
-  <img src="local_img/bendy_intro.png">
+  <img src="local_img/bendry_intro.png">
   <div class="image-title">
-  <h2>Construction and joinery details</h2>
+  Construction and joinery details
   </div> 
   <img src="local_img/bendy_02_view.png">
   <div class="image-title">
-  <h2><a href="../aartics_architecture.pdf" target="_blank">Click here to see complete Architectural design portfolio</a></h2>
+  <a href="../aartics_architecture.pdf" target="_blank">Click here to see complete Architectural design portfolio</a>
   </div>
 </div>
 
