--- a/aartics/projects/coimbatore/index.htm
+++ b/aartics/projects/coimbatore/index.htm
@@ -26,18 +26,21 @@
 </div>
 <div id="project-content">
   <div class="image-title">
-  <h2>Project Context</h2>
+  Project Context
+  <h2>Role: Architect, Arris Architects, Mumbai</h2>
   </div>
   <img src="local_img/coimbatore_intro.png">
 
   <div class="image-title">
-  <h2>Plan</h2>
+  Design Communication in Plans
+  <p><br>The plans for the new mall conveyed the approaches, frontages, multiplex, open-to-air courts, and marked all the profitable leasable area to the clients. The also serve as an important structural design document<p>
+  
   </div>
   <img src="local_img/coimbatore_plan1.png">
   <img src="local_img/coimbatore_plan23.png">
   <div class="image-title">
-  Design Concept views
-  <p>Description of the design</p>
+  3D Views of the Design Concept
+  <p><br>I conducted several rapid design iterations with computer generated 3D models, to be able to present several design options. The final design aesthetic is inspired by forms that are reminiscent of the local motifs such as the delicate textiles and the tall palm trees. We also innovated on the planning, by proposed a semi-open air mall for climatic benefit.</p>
   </div> 
   <img src="local_img/coimbatore_view1.png">
   <img src="local_img/coimbatore_view2.png">
