--- a/aartics/projects/graphics/index.htm
+++ b/aartics/projects/graphics/index.htm
@@ -26,13 +26,13 @@
 </div>
 <div id="project-content">
   <div class="image-title">
-  <h2>Clipart for self-enabled learning</h2>
-  <p>Hired by Illumine Knowledge Resources. They wanted to put together a package for self-enabled learning. There graphics were developed to be used a clipart in presentations and print, to identify each unique section of learning type.</p>
+  Clipart for self-enabled learning
+  <p><br>I was hired by Illumine Knowledge Resources, to put together a graphics package to supplement a program for self-enabled learning. There graphics were developed to be used as clipart in presentations and print, to identify each unique section of learning type.</p>
   </div>
   <img src="local_img/001_clipart.png">
   <div class="image-title">
-  <h2>Logos and Branding</h2>
-  <p>Every design project and communication needs visual identity that is closely associated with the ethos of the project. I love to go the extra mile and complete some logos and branding that becomes the identity of the design package</p>
+  Logos and Branding
+  <p><br>Every design project and communication needs visual identity that is closely associated with the ethos of the project. I love to go the extra mile and whip up some logos and branding that becomes the identity of the design package</p>
   </div>
   <img src="local_img/logos.png">
 </div>
