--- a/aartics/projects/mumbai/index.htm
+++ b/aartics/projects/mumbai/index.htm
@@ -26,25 +26,26 @@
 </div>
 <div id="project-content">
   <div class="image-title">
-  <h2>Project Context Description</h2>
+  Project Context
+  <h2>Thesis for M.Sc. Urbanism, T.U. Delft, The Netherlands</h2>
   </div>
   <img src="local_img/002_mumbai_intro.png">
 
   <div class="image-title">
-  <h2>3D Concept rendering for new waterfront development</h2>
+  3D concept rendering for new waterfront development
+  <p><br>Geographically situated 3D model of part of the city of Mumbai, showing the design proposal for corridors connecting the hills to the wetlands with new forms of urbanism, that will harvest water and grow into a new waterfront and bridge connecting across the bay.</p>
   </div>
   <img src="local_img/view.jpg">
   <div class="image-title">
-  <h2>Phased out Masterplan for wetland economic zone</h2>
+  Phased out Masterplan for a new "Wetland Economic Zone"
   </div>
   <img src="local_img/plan.jpg">
   <div class="image-title">
-  <h2>Mapping research for the urban growth of Munbai</h2>
+  Mapping the urban growth of Munbai
+  <p><br>Collected and studied several historic maps and data of Mumbai city to show how the city grew from a few fishing islands to the booming urban center it is now.</p>
+  <p>Based on documents from the city development authorities, I also mapped the upcoming future plans for the city and presented the possible climatic dangers of this unmanaged growth.</p>
   </div> 
   <img src="local_img/pg1.jpg">
-  <div class="image-title">
-  <h2>Innovation in methods of urban development</h2>
-  </div> 
   <img src="local_img/pg2.jpg">
   <div class="image-title">
   <h2>Design Dissertation, M.Sc Urbanism, Netherlands</h2>
@@ -52,7 +53,7 @@
   </div> 
   <img src="local_img/mumbai_end.png">
   <div class="image-title">
-  <a href="../aartics_recentering_mumbai.pdf" target="_blank"><h2>Click here to see the project in more detail</h2></a>
+  <a href="../aartics_recentering_mumbai.pdf" target="_blank">Click here for complete Recentering Mumbai PDF</a>
   </div> 
 </div>
 
