--- a/aartics/projects/barcelona/index.htm
+++ b/aartics/projects/barcelona/index.htm
@@ -31,31 +31,33 @@
   <div class="image-title">
   Project Context
   <p><br>Our team of 4 proposed a restructuring of the public transport, private transport and connected public space axes throughout the Barcelona city center.</p>
+  <h2><a href="https://vimeo.com/25602758" target="_blank">See our 4 minute movie of "The City Idea" for Barcelona</a></h2>
+
   </div>
   <img src="local_img/barcelona_intro.png">
-
+  
   <div class="image-title">
   Mapping new public transportation routes
-  <p>The new public transport system gets rid of the convulated bus routes and proposes a simple horizontal and thoroughfare of buses that has larger coverage,  better frequency and minimises confusion for new travellers. This would increase the efficiency of public transport</p>
+  <p><br>The new public transport system replaces the present convulated bus routes and proposes a simple horizontal and thoroughfare of buses that has larger coverage,  better frequency and minimises confusion for new travellers. This would increase the efficiency of public transport</p>
   </div>
   <img src="local_img/barcelona_02_map.png">
   <div class="image-title">
-  <h2>Superblocks</h2>
-  <p>Based on the current urban planning pattern of the city, we proposed a super-block that would combine 4 blocks. Private transportation and parking is moved outside the super-block, and the interior is freed up to be open public spaces.</p>
+  Superblocks
+  <p><br>Based on the current urban planning pattern of the city, we proposed a super-block that would combine 4 blocks. Private transportation and parking is moved outside the super-block, and the interior is freed up to be open public spaces.</p>
   </div>
   <img src="local_img/barcelona_03_pics.png">
   <div class="image-title">
     Mapping traffic flow intensity
-  <p><br>Mapping the redistribution of the private transport distribution based on the mapping data of the current peak traffic flow</p>
+  <p><br>We mapped the redistribution of the traffic flows based on the current traffic flow data</p>
   </div> 
-  <img src="local_img/barcelona_04_img.png">
+  <img src="local_img/barcelona_04_img.png" width=100%/>
   <div class="image-title">
-  <h2>M.Sc Urbanism Term Project, U.P.C, Barcelona</h2>
-  <p>This project was presented at U.P.C, Barcelona, as part of the inter-university program -  European Masters in Urbanism</p>
+  M.Sc Urbanism Term Project, U.P.C, Barcelona
+  <p><br>This project was presented at U.P.C, Barcelona, as part of the inter-university program -  European Masters in Urbanism</p>
   </div> 
   <img src="local_img/barcelona_end.png">
   <div class="image-title">
-  <a href="../aartics_urbanism.pdf" target="_blank"><h2>Click here to see all Urban design projects</h2></a>
+  <a href="../aartics_urbanism.pdf" target="_blank">Click here to see all Urban design projects</a>
   </div> 
 </div>
 
